[package]
name = "os"
version = "0.1.0"
authors = ["liuhz <1456437967@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algorithm = { path = 'src/algorithm' }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.6.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.1" # 它无需任何操作系统支持
bit_field = "0.10.1"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
hashbrown = "0.9.1"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
device_tree = { git = "https://github.com/rcore-os/device_tree-rs" }
rcore-fs = { git = "https://github.com/rcore-os/rcore-fs"}
rcore-fs-sfs = { git = "https://github.com/rcore-os/rcore-fs"}

# panic 的处理策略设为直接终止，也就是直接调用我们的 panic_handler 而不是先进行 堆栈展开 等处理再调用。因为我们没有实现堆栈展开的功能
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
